# render

./: .gitignore  CMakeLists.txt
backup/: main_quadlight_scene.cpp  目录结构
build_migrated/: CMakeCache.txt.tmpf59ab
include/: camera.h  film.h  frame.h  hit.h  hittable.h  light.h  material.h  plane.h  quad.h  random.h  ray.h  renderer.h  scene.h  sphere.h  triangle.h  vec3.h
include/core/: aabb.h  frame.h  random.h  ray.h  stats.h  vec3.h
include/geometry/: bvh.h  hit.h  hittable.h  mesh.h  plane.h  quad.h  sphere.h  triangle.h
include/image/: image.h
include/light/: light.h
include/material/: material.h
include/render/: camera.h  film.h  renderer.h  scene.h
src/: camera.cpp  camera.h  film.cpp  image.h  light.cpp  main.cpp  material.cpp  plane.cpp  quad.cpp  ray.h  renderer.cpp  scene.cpp  sphere.cpp  sphere.h  triangle.cpp  vec3.h
src/core/: stats.cpp
src/geometry/: bvh.cpp  mesh.cpp  plane.cpp  quad.cpp  sphere.cpp  triangle.cpp
src/light/: light.cpp
src/material/: material.cpp
src/render/: camera.cpp  film.cpp  renderer.cpp  scene.cpp
